Fix spacing and SEO for image headers

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,8 +46,9 @@ footer { color: var(--text-color);  border-top: dashed 1px rgba(219, 219, 219, 0
 header { margin-top: 25px;  margin-bottom: 10px; }
 header p { text-align: left;  margin: 0; }
 footer { margin-bottom: 20px; }
-img.home_header { width: 100%; margin-top: 5%; margin-bottom: 5%; }
-img.detail_header { width: 100%; }
+.home_header img { width: 100%; margin-top: 5%; margin-bottom: 5%; }
+h1.home_header { margin-top: 0; }
+.detail_header img { width: 100%; }
 
 /* LISTS */
 :not(.menu) > ul { list-style: none; padding-left: 1em; }
